Lang/output/aegiscriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5 C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3 2013-02-21 18:05:36

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5")]
[System.CLSCompliant(false)]
public partial class aegiscriptParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "DIGIT", "ESC_SEQ", "EXPONENT", "FLOAT", "HEX_DIGIT", "IDENT", "INTEGER", "LETTER", "MULTILINE_COMMENT", "OCTAL_ESC", "UNICODE_ESC", "WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "'/='", "':'", "';'", "'<'", "'<='", "'='", "'>'", "'>='", "'Integer'", "'and'", "'begin'", "'constant'", "'else'", "'elsif'", "'end'", "'if'", "'mod'", "'not'", "'or'", "'var'", "'while'"
	};
	public const int EOF=-1;
	public const int T__17=17;
	public const int T__18=18;
	public const int T__19=19;
	public const int T__20=20;
	public const int T__21=21;
	public const int T__22=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int COMMENT=4;
	public const int DIGIT=5;
	public const int ESC_SEQ=6;
	public const int EXPONENT=7;
	public const int FLOAT=8;
	public const int HEX_DIGIT=9;
	public const int IDENT=10;
	public const int INTEGER=11;
	public const int LETTER=12;
	public const int MULTILINE_COMMENT=13;
	public const int OCTAL_ESC=14;
	public const int UNICODE_ESC=15;
	public const int WS=16;

	public aegiscriptParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public aegiscriptParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return aegiscriptParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();
	// $ANTLR start "program"
	// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:16:1: public program : 'begin' ( statement )* 'end' ';' ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal1 = default(IToken);
		IToken string_literal3 = default(IToken);
		IToken char_literal4 = default(IToken);
		AstParserRuleReturnScope<object, IToken> statement2 = default(AstParserRuleReturnScope<object, IToken>);

		object string_literal1_tree = default(object);
		object string_literal3_tree = default(object);
		object char_literal4_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(16, 1);
		try
		{
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:17:2: ( 'begin' ( statement )* 'end' ';' )
			DebugEnterAlt(1);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:18:3: 'begin' ( statement )* 'end' ';'
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(18, 3);
			string_literal1=(IToken)Match(input,34,Follow._34_in_program44); 
			string_literal1_tree = (object)adaptor.Create(string_literal1);
			adaptor.AddChild(root_0, string_literal1_tree);
			DebugLocation(19, 3);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:19:3: ( statement )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_1 = input.LA(1);

				if ((LA1_1==IDENT||LA1_1==39||LA1_1==44))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:19:3: statement
					{
					DebugLocation(19, 3);
					PushFollow(Follow._statement_in_program48);
					statement2=statement();
					PopFollow();

					adaptor.AddChild(root_0, statement2.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(20, 3);
			string_literal3=(IToken)Match(input,38,Follow._38_in_program53); 
			string_literal3_tree = (object)adaptor.Create(string_literal3);
			adaptor.AddChild(root_0, string_literal3_tree);
			DebugLocation(20, 9);
			char_literal4=(IToken)Match(input,26,Follow._26_in_program55); 
			char_literal4_tree = (object)adaptor.Create(char_literal4);
			adaptor.AddChild(root_0, char_literal4_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(21, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_constant();
	partial void LeaveRule_constant();
	// $ANTLR start "constant"
	// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:23:1: constant : 'constant' type IDENT '=' expression ';' ;
	[GrammarRule("constant")]
	private AstParserRuleReturnScope<object, IToken> constant()
	{
		EnterRule_constant();
		EnterRule("constant", 2);
		TraceIn("constant", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal5 = default(IToken);
		IToken IDENT7 = default(IToken);
		IToken char_literal8 = default(IToken);
		IToken char_literal10 = default(IToken);
		AstParserRuleReturnScope<object, IToken> type6 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> expression9 = default(AstParserRuleReturnScope<object, IToken>);

		object string_literal5_tree = default(object);
		object IDENT7_tree = default(object);
		object char_literal8_tree = default(object);
		object char_literal10_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "constant");
		DebugLocation(23, 1);
		try
		{
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:24:2: ( 'constant' type IDENT '=' expression ';' )
			DebugEnterAlt(1);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:24:4: 'constant' type IDENT '=' expression ';'
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(24, 4);
			string_literal5=(IToken)Match(input,35,Follow._35_in_constant66); 
			string_literal5_tree = (object)adaptor.Create(string_literal5);
			adaptor.AddChild(root_0, string_literal5_tree);
			DebugLocation(24, 15);
			PushFollow(Follow._type_in_constant68);
			type6=type();
			PopFollow();

			adaptor.AddChild(root_0, type6.Tree);
			DebugLocation(24, 20);
			IDENT7=(IToken)Match(input,IDENT,Follow._IDENT_in_constant70); 
			IDENT7_tree = (object)adaptor.Create(IDENT7);
			adaptor.AddChild(root_0, IDENT7_tree);
			DebugLocation(24, 26);
			char_literal8=(IToken)Match(input,29,Follow._29_in_constant72); 
			char_literal8_tree = (object)adaptor.Create(char_literal8);
			adaptor.AddChild(root_0, char_literal8_tree);
			DebugLocation(24, 30);
			PushFollow(Follow._expression_in_constant74);
			expression9=expression();
			PopFollow();

			adaptor.AddChild(root_0, expression9.Tree);
			DebugLocation(24, 41);
			char_literal10=(IToken)Match(input,26,Follow._26_in_constant76); 
			char_literal10_tree = (object)adaptor.Create(char_literal10);
			adaptor.AddChild(root_0, char_literal10_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("constant", 2);
			LeaveRule("constant", 2);
			LeaveRule_constant();
		}
		DebugLocation(25, 1);
		} finally { DebugExitRule(GrammarFileName, "constant"); }
		return retval;

	}
	// $ANTLR end "constant"

	partial void EnterRule_variable();
	partial void LeaveRule_variable();
	// $ANTLR start "variable"
	// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:27:1: variable : 'var' IDENT ( ',' IDENT )* ':' type ( '=' expression )? ';' ;
	[GrammarRule("variable")]
	private AstParserRuleReturnScope<object, IToken> variable()
	{
		EnterRule_variable();
		EnterRule("variable", 3);
		TraceIn("variable", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal11 = default(IToken);
		IToken IDENT12 = default(IToken);
		IToken char_literal13 = default(IToken);
		IToken IDENT14 = default(IToken);
		IToken char_literal15 = default(IToken);
		IToken char_literal17 = default(IToken);
		IToken char_literal19 = default(IToken);
		AstParserRuleReturnScope<object, IToken> type16 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> expression18 = default(AstParserRuleReturnScope<object, IToken>);

		object string_literal11_tree = default(object);
		object IDENT12_tree = default(object);
		object char_literal13_tree = default(object);
		object IDENT14_tree = default(object);
		object char_literal15_tree = default(object);
		object char_literal17_tree = default(object);
		object char_literal19_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "variable");
		DebugLocation(27, 1);
		try
		{
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:28:2: ( 'var' IDENT ( ',' IDENT )* ':' type ( '=' expression )? ';' )
			DebugEnterAlt(1);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:28:4: 'var' IDENT ( ',' IDENT )* ':' type ( '=' expression )? ';'
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(28, 4);
			string_literal11=(IToken)Match(input,43,Follow._43_in_variable87); 
			string_literal11_tree = (object)adaptor.Create(string_literal11);
			adaptor.AddChild(root_0, string_literal11_tree);
			DebugLocation(28, 10);
			IDENT12=(IToken)Match(input,IDENT,Follow._IDENT_in_variable89); 
			IDENT12_tree = (object)adaptor.Create(IDENT12);
			adaptor.AddChild(root_0, IDENT12_tree);
			DebugLocation(28, 16);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:28:16: ( ',' IDENT )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if ((LA2_1==21))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:28:17: ',' IDENT
					{
					DebugLocation(28, 17);
					char_literal13=(IToken)Match(input,21,Follow._21_in_variable92); 
					char_literal13_tree = (object)adaptor.Create(char_literal13);
					adaptor.AddChild(root_0, char_literal13_tree);
					DebugLocation(28, 21);
					IDENT14=(IToken)Match(input,IDENT,Follow._IDENT_in_variable94); 
					IDENT14_tree = (object)adaptor.Create(IDENT14);
					adaptor.AddChild(root_0, IDENT14_tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }

			DebugLocation(28, 29);
			char_literal15=(IToken)Match(input,25,Follow._25_in_variable98); 
			char_literal15_tree = (object)adaptor.Create(char_literal15);
			adaptor.AddChild(root_0, char_literal15_tree);
			DebugLocation(28, 33);
			PushFollow(Follow._type_in_variable100);
			type16=type();
			PopFollow();

			adaptor.AddChild(root_0, type16.Tree);
			DebugLocation(28, 38);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:28:38: ( '=' expression )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_1 = input.LA(1);

			if ((LA3_1==29))
			{
				alt3 = 1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:28:39: '=' expression
				{
				DebugLocation(28, 39);
				char_literal17=(IToken)Match(input,29,Follow._29_in_variable103); 
				char_literal17_tree = (object)adaptor.Create(char_literal17);
				adaptor.AddChild(root_0, char_literal17_tree);
				DebugLocation(28, 43);
				PushFollow(Follow._expression_in_variable105);
				expression18=expression();
				PopFollow();

				adaptor.AddChild(root_0, expression18.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(3); }

			DebugLocation(28, 56);
			char_literal19=(IToken)Match(input,26,Follow._26_in_variable109); 
			char_literal19_tree = (object)adaptor.Create(char_literal19);
			adaptor.AddChild(root_0, char_literal19_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("variable", 3);
			LeaveRule("variable", 3);
			LeaveRule_variable();
		}
		DebugLocation(29, 1);
		} finally { DebugExitRule(GrammarFileName, "variable"); }
		return retval;

	}
	// $ANTLR end "variable"

	partial void EnterRule_type();
	partial void LeaveRule_type();
	// $ANTLR start "type"
	// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:31:1: type : 'Integer' ;
	[GrammarRule("type")]
	private AstParserRuleReturnScope<object, IToken> type()
	{
		EnterRule_type();
		EnterRule("type", 4);
		TraceIn("type", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal20 = default(IToken);

		object string_literal20_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "type");
		DebugLocation(31, 1);
		try
		{
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:32:2: ( 'Integer' )
			DebugEnterAlt(1);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:32:4: 'Integer'
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(32, 4);
			string_literal20=(IToken)Match(input,32,Follow._32_in_type121); 
			string_literal20_tree = (object)adaptor.Create(string_literal20);
			adaptor.AddChild(root_0, string_literal20_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("type", 4);
			LeaveRule("type", 4);
			LeaveRule_type();
		}
		DebugLocation(33, 1);
		} finally { DebugExitRule(GrammarFileName, "type"); }
		return retval;

	}
	// $ANTLR end "type"

	partial void EnterRule_ifStatement();
	partial void LeaveRule_ifStatement();
	// $ANTLR start "ifStatement"
	// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:35:1: ifStatement : 'if' expression ':' ( statement )* ( 'elsif' expression ':' ( statement )* )* ( 'else' ':' ( statement )* )? 'end' 'if' ';' ;
	[GrammarRule("ifStatement")]
	private AstParserRuleReturnScope<object, IToken> ifStatement()
	{
		EnterRule_ifStatement();
		EnterRule("ifStatement", 5);
		TraceIn("ifStatement", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken string_literal21 = default(IToken);
		IToken char_literal23 = default(IToken);
		IToken string_literal25 = default(IToken);
		IToken char_literal27 = default(IToken);
		IToken string_literal29 = default(IToken);
		IToken char_literal30 = default(IToken);
		IToken string_literal32 = default(IToken);
		IToken string_literal33 = default(IToken);
		IToken char_literal34 = default(IToken);
		AstParserRuleReturnScope<object, IToken> expression22 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> statement24 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> expression26 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> statement28 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> statement31 = default(AstParserRuleReturnScope<object, IToken>);

		object string_literal21_tree = default(object);
		object char_literal23_tree = default(object);
		object string_literal25_tree = default(object);
		object char_literal27_tree = default(object);
		object string_literal29_tree = default(object);
		object char_literal30_tree = default(object);
		object string_literal32_tree = default(object);
		object string_literal33_tree = default(object);
		object char_literal34_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "ifStatement");
		DebugLocation(35, 1);
		try
		{
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:36:2: ( 'if' expression ':' ( statement )* ( 'elsif' expression ':' ( statement )* )* ( 'else' ':' ( statement )* )? 'end' 'if' ';' )
			DebugEnterAlt(1);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:36:4: 'if' expression ':' ( statement )* ( 'elsif' expression ':' ( statement )* )* ( 'else' ':' ( statement )* )? 'end' 'if' ';'
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(36, 4);
			string_literal21=(IToken)Match(input,39,Follow._39_in_ifStatement133); 
			string_literal21_tree = (object)adaptor.Create(string_literal21);
			adaptor.AddChild(root_0, string_literal21_tree);
			DebugLocation(36, 9);
			PushFollow(Follow._expression_in_ifStatement135);
			expression22=expression();
			PopFollow();

			adaptor.AddChild(root_0, expression22.Tree);
			DebugLocation(36, 20);
			char_literal23=(IToken)Match(input,25,Follow._25_in_ifStatement137); 
			char_literal23_tree = (object)adaptor.Create(char_literal23);
			adaptor.AddChild(root_0, char_literal23_tree);
			DebugLocation(37, 3);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:37:3: ( statement )*
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_1 = input.LA(1);

				if ((LA4_1==IDENT||LA4_1==39||LA4_1==44))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch ( alt4 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:37:3: statement
					{
					DebugLocation(37, 3);
					PushFollow(Follow._statement_in_ifStatement141);
					statement24=statement();
					PopFollow();

					adaptor.AddChild(root_0, statement24.Tree);

					}
					break;

				default:
					goto loop4;
				}
			}

			loop4:
				;

			} finally { DebugExitSubRule(4); }

			DebugLocation(38, 5);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:38:5: ( 'elsif' expression ':' ( statement )* )*
			try { DebugEnterSubRule(6);
			while (true)
			{
				int alt6=2;
				try { DebugEnterDecision(6, false);
				int LA6_1 = input.LA(1);

				if ((LA6_1==37))
				{
					alt6 = 1;
				}


				} finally { DebugExitDecision(6); }
				switch ( alt6 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:38:6: 'elsif' expression ':' ( statement )*
					{
					DebugLocation(38, 6);
					string_literal25=(IToken)Match(input,37,Follow._37_in_ifStatement149); 
					string_literal25_tree = (object)adaptor.Create(string_literal25);
					adaptor.AddChild(root_0, string_literal25_tree);
					DebugLocation(38, 14);
					PushFollow(Follow._expression_in_ifStatement151);
					expression26=expression();
					PopFollow();

					adaptor.AddChild(root_0, expression26.Tree);
					DebugLocation(38, 25);
					char_literal27=(IToken)Match(input,25,Follow._25_in_ifStatement153); 
					char_literal27_tree = (object)adaptor.Create(char_literal27);
					adaptor.AddChild(root_0, char_literal27_tree);
					DebugLocation(39, 7);
					// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:39:7: ( statement )*
					try { DebugEnterSubRule(5);
					while (true)
					{
						int alt5=2;
						try { DebugEnterDecision(5, false);
						int LA5_1 = input.LA(1);

						if ((LA5_1==IDENT||LA5_1==39||LA5_1==44))
						{
							alt5 = 1;
						}


						} finally { DebugExitDecision(5); }
						switch ( alt5 )
						{
						case 1:
							DebugEnterAlt(1);
							// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:39:7: statement
							{
							DebugLocation(39, 7);
							PushFollow(Follow._statement_in_ifStatement161);
							statement28=statement();
							PopFollow();

							adaptor.AddChild(root_0, statement28.Tree);

							}
							break;

						default:
							goto loop5;
						}
					}

					loop5:
						;

					} finally { DebugExitSubRule(5); }


					}
					break;

				default:
					goto loop6;
				}
			}

			loop6:
				;

			} finally { DebugExitSubRule(6); }

			DebugLocation(40, 5);
			// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:40:5: ( 'else' ':' ( statement )* )?
			int alt8=2;
			try { DebugEnterSubRule(8);
			try { DebugEnterDecision(8, false);
			int LA8_1 = input.LA(1);

			if ((LA8_1==36))
			{
				alt8 = 1;
			}
			} finally { DebugExitDecision(8); }
			switch (alt8)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:40:6: 'else' ':' ( statement )*
				{
				DebugLocation(40, 6);
				string_literal29=(IToken)Match(input,36,Follow._36_in_ifStatement172); 
				string_literal29_tree = (object)adaptor.Create(string_literal29);
				adaptor.AddChild(root_0, string_literal29_tree);
				DebugLocation(40, 13);
				char_literal30=(IToken)Match(input,25,Follow._25_in_ifStatement174); 
				char_literal30_tree = (object)adaptor.Create(char_literal30);
				adaptor.AddChild(root_0, char_literal30_tree);
				DebugLocation(41, 7);
				// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:41:7: ( statement )*
				try { DebugEnterSubRule(7);
				while (true)
				{
					int alt7=2;
					try { DebugEnterDecision(7, false);
					int LA7_1 = input.LA(1);

					if ((LA7_1==IDENT||LA7_1==39||LA7_1==44))
					{
						alt7 = 1;
					}


					} finally { DebugExitDecision(7); }
					switch ( alt7 )
					{
					case 1:
						DebugEnterAlt(1);
						// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:41:7: statement
						{
						DebugLocation(41, 7);
						PushFollow(Follow._statement_in_ifStatement182);
						statement31=statement();
						PopFollow();

						adaptor.AddChild(root_0, statement31.Tree);

						}
						break;

					default:
						goto loop7;
					}
				}

				loop7:
					;

				} finally { DebugExitSubRule(7); }


				}
				break;

			}
			} finally { DebugExitSubRule(8); }

			DebugLocation(42, 7);
			string_literal32=(IToken)Match(input,38,Follow._38_in_ifStatement194); 
			string_literal32_tree = (object)adaptor.Create(string_literal32);
			adaptor.AddChild(root_0, string_literal32_tree);
			DebugLocation(42, 13);
			string_literal33=(IToken)Match(input,39,Follow._39_in_ifStatement196); 
			string_literal33_tree = (object)adaptor.Create(string_literal33);
			adaptor.AddChild(root_0, string_literal33_tree);
			DebugLocation(42, 18);
			char_literal34=(IToken)Match(input,26,Follow._26_in_ifStatement198); 
			char_literal34_tree = (object)adaptor.Create(char_literal34);
			adaptor.AddChild(root_0, char_literal34_tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("ifStatement", 5);
			LeaveRule("ifStatement", 5);
			LeaveRule_ifStatement();
		}
		DebugLocation(43, 1);
		} finally { DebugExitRule(GrammarFileName, "ifStatement"); }
		return retval;

	}
	// $ANTLR end "ifStatement"

	partial void EnterRule_whileStatement();
	partial void LeaveRule_whileStatement();
	// $ANTLR start "whileStatement"
	// C:\\Users\\David\\Subversion\\AEGIScript\\Lang\\aegiscript.g3:45:1: whileStatement : 'while' expression ':' ( statement )* 'end' 'while' ';' ;
	[GrammarRule("whileStatement")]
	private AstParserRuleReturnScope<object, IToken> whileStatement()
	{
		EnterRule_whileStatement();
		EnterRule("whileStatement", 6);
		TraceIn("whileStatement", 6);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);
